--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <li>Earth has a powerful magnetic field.</li>
     </ol>
     <table>
-      <thead>
-        <th>Name</th>
-        <th>Avg. Temp.</th>
+      <head>
+        <tr><th>Name</th>
+        <th>Avg. Temp.</th></tr>
       </thead>
       <tbody>
         <tr>
