--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
     </table>
     <hr />
     <p>Want to know more?</p>
-    <input
-      type="button"
-      value="Click Me!"
-      onclick="window.open('https://www.space.com/', '_blank')"
-    />
+    <form target="_blank" action="https://www.space.com/">
+      <input type="button" value="Click Me!" />
+    </form>
   </body>
 </html>
